@@ -159,6 +159,7 @@ class MagicWord {
 		'noeditsection',
 		'newsectionlink',
 		'hiddencat',
+		'ignoreunused',
 		'index',
 		'noindex',
 		'staticredirect',
